# cookiecutter-boilerplate

./: README.md  cookiecutter.json
.github/workflows/: cicd.yaml
hooks/: post_gen_project.py  pre_gen_project.py
hooks/config/: defaults.yaml
tests/: test_creation.py
{{ cookiecutter.repo_name }}/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_environment.py  tox.ini
{{ cookiecutter.repo_name }}/docs/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/tests/: test_environment.py
